--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="rightmain__contacts">
                     <h4 class="heading_h4 heading__h4_contacts heading__right_contacts">SEND US MESSAGE</h4>
-                    <form action="#" class="text__right_contacts">
+                    <form action="#" method="post" class="text__right_contacts">
                         Full name <br><input class="input input_area" type="text" size="30" placeholder="Your Name"><br>
                         Email <br><input class="input input_area" type="email" placeholder="Your Email"><br>
                         Message <br><textarea class="input input_area_message" name="Message" cols="30" rows="10"
