--- a/templates/index.html
+++ b/templates/index.html
@@ -156,7 +156,7 @@
         <td>Сб, 11 сентября 2021<br/>11:00 - 16:00</td>
     </tr>
 </table>
-<form action="" method="get">
+<form action="" method="post">
     <fieldset>
         <legend>Зарегистрируйтесь</legend>
         <p><label class="title" for="name">Ваше имя:</label>
