--- a/templates/create_student.html
+++ b/templates/create_student.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}
+	Создание студента
+{% endblock %}
+
+{% block style %}
+	{% include "includes/inc-style.html" %}
+{% endblock %}
+
+{% block menu %}
+	{% include "includes/inc-menu.html" %}
+{% endblock %}
+
+{% block body %}
+<div>
+    <li>
+        <a href="/student-list/">Список студентов</a>
+    </li>
+    <li>
+        <a href="/add-student/">Добавить студента на курс</a>
+    </li>
+</div>
+<div>
+    <h1>Создание студента</h1>
+    <form method="post">
+        <label>
+            <input type="text" name="name" placeholder="Имя">
+        </label>
+        <button type="submit">Сохранить</button>
+    </form>
+</div>
+{% endblock %}
